<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Group5 - IoT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home temperature regulator</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="change">Change</string>
    <string name="previous">Previous</string>
    <string name="thingspeakAction_LEDon">On</string>
    <string name="thingspeakAction_LEDoff">Off</string>
    <string name="thingspeak_temp">Wanted temperature</string>
    <string name="settings_desc">Settings section of the app</string>
    <string name="fanStatus">Fan status</string>
    <string name="fan_auto">Auto</string>
    <string name="fan_low">Off</string>
    <string name="fan_med">Low</string>
    <string name="fan_high">High</string>
    <string name="ledStatus">Current temperature</string>
    <string name="Reload">Update data</string>
    <string name="Thingspeak_account">ThingSpeak account settings</string>
    <string name="Account_preferences">App description</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="changelanguage_en">Danish language</string>
    <string name="thingspeak_username">Username: nettomanden@hotmail.com</string>
    <string name="thingspeak_password">Password: See the report</string>
    <string name="app_description">This is an app to control room temperature. It reads the current temperature and sets a wanted temperature which then is automatically pursued. Should you want to override the fan settings this is also possible via the app.</string>
    <string name="toofast">You are too fast for our servers. Please wait a few seconds and try again</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>